last auto-updating fixes i think